--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: hwb(208 21% 68%);
+    background:linear-gradient(to bottom right, #3498db, #9b59b6);
     color: #D7BDE2;
     padding: 1rem 2rem;
 }
