--- a/BMD.css
+++ b/BMD.css
@@ -1,11 +1,11 @@
 html {
-    font-family:'Times New Roman', Times, serif
+    font-family:'Montserrat', sans-serif;
 }
 
 body {
     margin: 0;
     background:linear-gradient(to bottom right, #3498db, #9b59b6);
-    text-align: center;
+    text-align: justify;
 }
 
 header {
@@ -18,14 +18,15 @@ header h1 {
     font-size: 3rem;
     text-align: center;
 }
-.container {
+.container {        
     width: 400px;
     margin: 0 auto;
+    background-color: #a8b0da;
 }
 
 section article {
     transition: box-shadow 0.3s ease;
-    background-color: #fff;
+    background-color: #a8b0da;
     margin: 1rem 0;
     border-radius: 0.5rem;
     padding: 0.25rem 0;
@@ -33,7 +34,7 @@ section article {
 }
 
 section a {
-    color: rgb(30, 161, 161);
+    color: #7aaeae;
     text-decoration: none;
 }
 
